# 123pan-cpp

./: .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/workflows/: build.yaml  check.yml
src/: main.cpp
src/app/api/: model.cpp  model.hpp  session.cpp  session.hpp
src/app/common/: api.cpp  api.hpp  config.cpp  config.hpp  const.hpp  credential.cpp  credential.hpp  log.cpp  log.hpp  speed_limiter.cpp  speed_limiter.hpp
src/app/data/: devices.cpp  devices.hpp
src/app/qml/: App.qml  Backend.cpp  Backend.h  CloudPage.qml  FilePage.qml  LoginPage.qml  LoginWindow.qml  SettingsPage.qml  TestPage.qml  ThemeConfig.qml  TransferPage.qml
src/app/service/: auth_service.cpp  auth_service.hpp  download_service.cpp  download_service.hpp  file_service.cpp  file_service.hpp  upload_service.cpp  upload_service.hpp
src/app/tasks/: file_tasks.cpp  file_tasks.hpp  signals.cpp  signals.hpp
src/app/view/: cloud_interface.cpp  cloud_interface.hpp  dialogs.cpp  dialogs.hpp  file_interface.cpp  file_interface.hpp  login_window.cpp  login_window.hpp  main_window.cpp  main_window.hpp  setting_interface.cpp  setting_interface.hpp  transfer_interface.cpp  transfer_interface.hpp
src/resource/: qml.qrc  resource.qrc
src/resource/qss/: base.qss  components.qss
tests/integration/: test_session.cpp
tests/unit/: test_api_utils.cpp  test_config.cpp  test_credential.cpp  test_model.cpp  test_speed_limiter.cpp
